--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 .wrapper {
     display: flex;
     align-content:center;
-    background-image: url(../images/1.jpg);
+    background-color: #20B2AA;
     justify-content: center;
 }
 
